# 8088Emulator

./: .gitignore  Makefile  README.md
assembly/: 8086template  8086template.asm  example  example.asm  test  test.asm
demo/: Makefile  demo  main.cpp
docs/: 8086 instructions.html
emulator_lib/: 8088CPU.h  Makefile  arthmeticAndLogic_instructions.cpp  binTrie.h  consts.h  dataTransmission_instuctions.cpp  flags.cpp  flags.h  macros.h
tests/: CMakeLists.txt  Makefile  test  test.cpp  tests
